# HeartrateClassificationPublic

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  requirements_gpu_cu118.txt  requirements_gpu_cu121.txt  setup.py
.dvc/: config
bachelors_thesis/: cm.py  data_routine.py  inspect_model_job.py  model_verifier.py  train_model.py
bachelors_thesis/data/: __init__.py  dataloader.py  make_dataset.py  util.py
bachelors_thesis/models/: cnn.py  cnn21.py  cnn_proj.py  model.py
bachelors_thesis/utils/: evaluation.py  logging.py
data/: .gitignore  mappings.dvc  raw.dvc
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
notebooks/: show_video.py
